Fix styling on small devices (#48)
* put workshop count text on the right on small displays

--- a/website/static/website/style.scss
+++ b/website/static/website/style.scss
@@ -112,6 +112,14 @@ html, body {
 .calendar-nworkshops {
     color: rgba($color: #ffffff, $alpha: 0.8);
     display: inline-block;
+
+    // On mobile or smaller
+    @media (max-width: $breakpoint-tablet ){
+        position: absolute;
+        bottom: 0px;
+        right: 0px;
+        margin-bottom: 0.8em;
+    }
 }
 
 %event-card {
